Fix editor button alignment for mobile devices

--- a/frontend/src/app/components/header/header.component.sass
+++ b/frontend/src/app/components/header/header.component.sass
@@ -170,8 +170,20 @@ $guest-hover-color: green
         flex-direction: column
         justify-content: center
 
-        .ui.dropdown
-          padding-right: 1em
+        #logged-in
+
+          #username
+            font-size: 1.1em
+
+          #editor-btn
+            padding: .5em
+
+          .ui.dropdown
+            padding-right: 1em
 
         .button
           width: 7.5em
+
+  #key-commands
+    .item
+      font-size: .85em
